fixes issue with legend on mobile

--- a/maps/following-la-aqueduct/css/style.css
+++ b/maps/following-la-aqueduct/css/style.css
@@ -1,7 +1,8 @@
-body.minimal .data-container #content-map-canvas {height: 1700px;}
-body.embedded .data-container #content-map-canvas {height: 1700px;}
+body.minimal .data-container #content-map-canvas {height: 1700px; z-index: 10;}
+body.embedded .data-container #content-map-canvas {height: 1700px; z-index: 10;}
 body.minimal .data-container #content-display {display: none; position: fixed; left: 30%; top: 20%; width: 40%; max-width: 40%; height: auto; background: #f7f7f7; z-index: 1003; color: #2b2b2b; padding: 2%; -moz-border-radius: 2%; -webkit-border-radius: 2%; border-radius: 2%; -khtml-border-radius: 2%;}
-#legend {position: absolute; top: 0px; right: 15px; z-index: 100;}
+
+#legend {position: absolute; top: 0px; right: 15px; z-index: 1000;}
 #legend table, th, tr, td {border-width: 0px; border-style: solid; border-color: gray; border-collapse: collapse; background-color: white;}
 #legend table {font-size: 12px; width: 100%;}
 #legend th {color: #fff; background-color: #aaa; padding: 5px 5px; border-top: 4px solid #555; font-weight: bold}
@@ -12,27 +13,22 @@ body.minimal .data-container #content-display {display: none; position: fixed; l
 .second_aqueduct {background-color: #404040;}
 
 /* -- media queries -- */
-/* adjust headers for smaller devices */
-@media screen and (max-width: 767px) {
-
-}
-
-/* headlines for content-display desktop */
-@media (min-width: 980px) {
-
-}
-
-/* headlines for Portrait tablet to landscape and desktop */
-@media (min-width: 500px) and (max-width: 979px) {
+@media (max-width: 480px) {
+    #legend {position: relative; top: 0px; right: 0px; z-index: 1000;}
     #content-map-canvas {width: 96%; height: 500px; margin: 0 2% 0 2%;}
     #content-background {display: none; position: fixed;}
     #content-display {max-width: 80%; display: none; position: fixed; left: 10%; top: 20%; }
+}
+
+@media (min-width: 481px) {
+    #content-map-canvas {width: 96%; height: 500px; margin: 0 2% 0 2%;}
+    #content-background {display: none; position: fixed;}
+    #content-display {max-width: 80%; display: none; position: fixed; left: 10%; top: 20%; }}
+
+@media (min-width: 992px) {
 
 }
 
-/* headlines for Landscape phones and down */
-@media (max-width: 499px) {
-    #content-map-canvas {width: 96%; height: 500px; margin: 0 2% 0 2%;}
-    #content-background {display: none; position: fixed;}
-    #content-display {max-width: 80%; display: none; position: fixed; left: 10%; top: 20%; }
+@media (min-width: 1700px) {
+
 }
